<resources>
    <string name="app_name">PDCA</string>
    <string name="title">PDCA管理</string>
    <string name="icon_p">P</string>
    <string name="icon_d">D</string>
    <string name="icon_c">C</string>
    <string name="icon_a">A</string>
    <string name="check_pdca">Check</string>
    <string name="action_pdca">Action</string>
    <string name="add_new_cycle">Add New Cycle</string>
    <string name="last_cycle_title">前回のCycle ( Plan と Check )</string>
    <string name="edit_button">Edit</string>
    <string name="more_button">More</string>
    <string name="limit_text">期日：</string>
    <string name="number_of_cycle">周回数：</string>
    <string name="back_induction">戻る</string>
    <string name="contents_induction">More Contents</string>
    <string name="title_p">Plan</string>
    <string name="title_limit">期日</string>
    <string name="title_d">Do</string>
    <string name="title_c">Check</string>
    <string name="title_a">Action</string>
    <string name="button_next_cycle_edit">次のPDCAサイクルを作成</string>
    <string name="button_before_cycle">1つ前のサイクル</string>
    <string name="button_next_cycle_contents">1つ先のサイクル</string>
    <string name="not_done_cycle">未解決</string>
    <string name="done_cycle">解決済み</string>
    <string name="item_allcycle_work">仕事</string>
    <string name="item_allcycle_homework">家事</string>
    <string name="item_allcycle_other">その他</string>
    <string name="title_add_fragment_1">新規PDCAサイクルの作成：</string>
    <string name="title_add_fragment_2">Plan内容を記入してください</string>
    <string name="limit_add_fragment">期限を入力してください</string>
    <string name="hint_edit_add_fragment">入力</string>
    <string name="cancel_text">Cancel</string>
    <string name="alart_edit_both">planと期日の両方を入力してください</string>
    <string name="save_text">変更内容を保存しました</string>
    <string name="error_text">保存に失敗しました</string>
    <string name="save_and_next">編集内容を保存して次のPDCAサイクルを作成しますか？？</string>
    <string name="excute_add_new_cycle">新しいPDCAサイクルを作成しました。</string>
    <string name="ok">ok</string>
    <string name="no">no</string>
    <string name="contents_cycle_number">週目</string>
    <string name="title_save_button">保存</string>
    <string name="please_edit_allcontents">空白の箇所を追記してください</string>
    <string name="test_long_text">ああああああああああああああああああああああああああああああああああああああああああああああああああ
    ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</string>


</resources>