<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_fragment_add_dialog_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="15dp"
                android:text="@string/title_add_fragment_1"
                />

            <TextView
                android:id="@+id/title_fragment_add_dialog_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_fragment_add_dialog_1"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/title_add_fragment_2"
                />

            <EditText
                android:id="@+id/edit_plan_fragment_add_dialog"
                android:layout_width="250dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_fragment_add_dialog_2"
                android:hint="@string/hint_edit_add_fragment"
                />

            <TextView
                android:id="@+id/limit_fragment_add_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_plan_fragment_add_dialog"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:text="@string/limit_add_fragment"
                />

            <EditText
                android:id="@+id/edit_limit_fragment_add_dialog"
                android:layout_width="250dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/limit_fragment_add_dialog"
                android:hint="@string/hint_edit_add_fragment"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
