<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_p">

        <TextView
            android:id="@+id/title_p_fragment_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/title_p"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/text_p_fragment_contents"
            android:layout_width="300dp"
            android:layout_height="110dp"
            app:layout_constraintStart_toStartOf="@id/title_p_fragment_contents"
            app:layout_constraintEnd_toEndOf="@id/title_p_fragment_contents"
            app:layout_constraintTop_toBottomOf="@id/title_p_fragment_contents"
            android:layout_marginTop="20dp"
            android:text="@string/test_long_text"
            android:maxLength="60"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/title_limit_fragment_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_p_fragment_contents"
            android:layout_marginTop="20dp"
            android:text="@string/title_limit"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/text_limit_fragment_contents"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="@id/title_p_fragment_contents"
            app:layout_constraintEnd_toEndOf="@id/title_p_fragment_contents"
            app:layout_constraintTop_toBottomOf="@id/title_limit_fragment_contents"
            android:layout_marginTop="20dp"
            android:text="@string/test_long_text"
            android:maxLength="60"
            android:background="@color/white"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>