<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="contentsdata"
            type="com.example.pdca.viewmodels.ContentsViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_a">
        <TextView
            android:id="@+id/title_a_fragment_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/title_a"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/edit_a_fragment_contents"
            android:layout_width="300dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_a_fragment_contents"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@{contentsdata.contentsCycleData.action}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/number_of_cycle_contents"
            app:layout_constraintBottom_toTopOf="@id/button_container_contents"
            android:text="@string/contents_cycle_number"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/number_of_cycle_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_container_contents"
            android:text="@{Integer.toString(contentsdata.contentsCycleData.number_of_cycle)}"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_container_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/beforeCycle_button_contents"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nextCycle_button_contents"
                android:text="@string/button_before_cycle"/>

            <Button
                android:id="@+id/nextCycle_button_contents"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/beforeCycle_button_contents"
                android:text="@string/button_next_cycle_contents"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>