<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolBar_contents"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tabLayout_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            >

            <Button
                android:id="@+id/back_button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/back_induction"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@color/white"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TableLayout
            android:id="@+id/tabLayout_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar_contents"
            app:layout_constraintBottom_toTopOf="@id/viewPager_contents"
            android:background="@color/black"
            />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager_contents"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout_edit"
            app:layout_constraintBottom_toTopOf="@id/button_container_contents"/>

        <TextView
            android:id="@+id/number_of_cycle_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_container_contents"
            tools:text="@string/button_next_cycle_contents"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_container_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager_contents"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/beforeCycle_button_contents"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/nextCycle_button_contents"
                android:text="@string/button_before_cycle"/>

            <Button
                android:id="@+id/nextCycle_button_contents"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/beforeCycle_button_contents"
                android:text="@string/button_next_cycle_contents"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>